--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -132,7 +132,7 @@ header {
 
 .slider-pointers {
     width: 100%;
-    height: 1.5rem;
+    height: 2rem;
     margin-top: -4rem;
     display: flex;
     justify-content: center;
@@ -148,6 +148,8 @@ header {
 }
 .point-active {
     background-color: var(--beige-color);
+    width: 1.6rem;
+    height: 1.6rem;
 }
 .points:hover {
     transform: scale(1.1)
