--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -67,12 +67,12 @@ header {
 
 
 .banner {
-    width: 100%;
+    width: 100vw;
     height: calc(100vh - 10rem);
     background-color: #333;
     background-image: url(../images/bg.jpg);
     background-position: center;
-    background-size: center;
+    background-size: cover;
     overflow-x: hidden;
 }
 
