--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -154,3 +154,13 @@ header {
 .points:hover {
     transform: scale(1.1)
 }
+
+#about {
+    height: 56vh;
+    width: 100%;
+}
+
+#services {
+    height: 44vh;
+    width: 100%;
+}
