--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,7 +4,9 @@
     --white-color: #fff;
     --beige-color: #b88a59;
     --grey-color: rgb(165, 164, 164);
+    --light-bg: #F7F7F7;
     --transparent-color: rgba(0, 0, 0, 0);
+    --opacity-color: rgba(0, 0, 0, 0.7)
 
 }
 * {
@@ -15,6 +17,9 @@
 }
 html {
     font-size: 62.5%;
+}
+body {
+    overflow-x: hidden;
 }
 .container {
     max-width: 114rem;
@@ -85,7 +90,7 @@ header {
 .banner .slide {
     width: 100vw;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: var(--opacity-color)
 }
 
 .banner .slide-area {
@@ -155,3 +160,59 @@ header {
     transform: scale(1.1)
 }
 
+.default {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.default .section-title, .default .section-desc {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.section-title {
+    font-size: 2rem;
+    margin-bottom: 1.0rem;
+}
+.default.dark .section-title,
+.default.dark .section-body {
+    color: var(--white-color);
+}
+.default.light .section-title,
+.default.light ,.section-body {
+    color: var(--black-color);
+}
+.section-desc {
+    font-size: 1.2rem;
+    color: var(--grey-color);
+    margin-bottom: 4rem;
+}
+.default .section-body {
+    margin: 0 auto;
+}
+.default.light {
+    background-color: var(--light-bg);
+}
+.default.dark {
+    background-color: var(--black-color);
+}
+
+
+
+
+
+
+
+
+
+/* CSS de áreas específicas */
+
+.section-aboutus {
+    display: flex;
+}
+.section-aboutus-left {
+    flex: 1;
+}
+.section-aboutus-right {
+    width: 50rem;
+}
