--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,7 +19,7 @@ html {
     font-size: 62.5%;
 }
 body {
-    overflow-x: hidden;
+
 }
 .container {
     max-width: 114rem;
@@ -356,4 +356,98 @@ header {
 }
 .projects-photo:hover .projects-photoinfo {
     display: flex;
+}
+
+
+
+
+/* OUR TEAM */
+
+.team-photos {
+    margin: 0 auto;
+    width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem    
+}
+.person-team-photo {
+    background-color: var(--white-color);
+    min-width: 35rem;
+    max-width: 40rem;
+    height: 43rem;
+    padding: 4.6rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.person-team-photo img {
+    width: 18rem;
+    height: 18rem;
+    margin-bottom: 4.5rem;
+}
+.person-team-photo h5 {
+    color: black;
+    font-size: 2.1rem;
+    text-transform: uppercase;
+    margin-bottom: 1.5rem;
+}
+.person-team-photo h6 {
+    color: var(--grey-color);
+    font-size:1.4rem ;
+    font-weight: 500;
+}
+.person-team-photo .social-media-person {
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4rem;
+}
+.person-team-photo .social-media-person span {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    cursor: pointer;
+}
+.person-team-photo .social-media-person span img {
+    height: 50%;
+    width: 50%;
+    margin: 0;
+}
+.person-team-photo .social-media-person span:hover {
+    background-color: var(--beige-color);
+}
+.person-team-photo .social-media-person span:nth-child(4) img{
+    width: 30%;
+}
+.default.dark.section-our-team {
+    background-image: url(../images/bg2.jpg);
+    background-position: center;
+    background-size: cover;
+    padding: 0;
+}
+.our-team-background {
+    width: 100%;
+    height: 100%;
+    padding: 5rem 0 5rem 0;
+    background-color: var(--opacity-color);
+}
+.our-team-background .slider-pointers {
+    margin-top: 5rem;
+}
+.section-body.sliders {
+    width: 300vw;
+    display: flex;
+}
+.team-photos.slide {
+    width: 100%;
 }
