--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -445,7 +445,7 @@ header {
 .our-team-background {
     width: 100%;
     height: 100%;
-    padding: 5rem 0 5rem 0;
+    padding: 5rem 5rem;
     background-color: var(--opacity-color);
 }
 .our-team-background .slider-pointers {
